[gd_scene load_steps=5 format=3 uid="uid://cnakiw5fb25w4"]

[ext_resource type="Script" path="res://CardInstance.gd" id="1_oy88a"]
[ext_resource type="Texture2D" uid="uid://htbx3nx1gwmy" path="res://textures/card.png" id="2_xbd5u"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uhkgb"]
texture = ExtResource("2_xbd5u")
region_rect = Rect2(0, 0, 74, 82)

[sub_resource type="Theme" id="Theme_jgxwx"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_uhkgb")

[node name="CardInstance" type="Control"]
custom_minimum_size = Vector2(150, 164)
layout_mode = 3
anchors_preset = 0
offset_right = 150.0
offset_bottom = 164.0
focus_mode = 2
mouse_filter = 1
script = ExtResource("1_oy88a")

[node name="Panel" type="PanelContainer" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(150, 164)
layout_mode = 1
anchors_preset = -1
offset_right = 150.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jgxwx")

[node name="Control" type="Control" parent="Panel"]
layout_mode = 2
mouse_filter = 1

[node name="Name" type="Label" parent="Panel/Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 99.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8

[node name="Essence" type="RichTextLabel" parent="Panel/Control"]
layout_direction = 3
layout_mode = 0
offset_left = 6.0
offset_top = 8.0
offset_right = 23.0
offset_bottom = 20.0
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
theme_override_font_sizes/italics_font_size = 8
theme_override_font_sizes/bold_italics_font_size = 8
theme_override_font_sizes/mono_font_size = 8
fit_content = true
scroll_active = false

[node name="Picture" type="TextureRect" parent="Panel/Control"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 0.551
offset_left = 7.0
offset_top = 16.0
offset_right = -5.0
offset_bottom = -5.364

[node name="Scroll" type="ScrollContainer" parent="Panel/Control"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 90.0
offset_right = -6.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 3

[node name="Abilities" type="VBoxContainer" parent="Panel/Control/Scroll"]
layout_mode = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="gui_input" from="Panel/Control/Essence" to="Panel/Control/Essence" method="_on_input" flags=18]
